[package]
name = "solana-helloworld"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "=1.10.6"

[lib]
name = "solana_helloworld"
crate-type = ["cdylib", "lib"]